Add TODO task assignee parameter

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
             {{view "select"
                class="form-control"
                content=users
-               optionValuePath="content.login"
+               optionValuePath="content.name"
                optionLabelPath="content.name"
                value=assignee}}
           </div>
