--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <div class="btn-group pull-right service"><button class="btn btn-success" {{action 'openModal' 'formEditDhcp' model}}><span class="glyphicon glyphicon-plus"></span>&#160;DHCP</button></div>
         {{/if}}
         {{#if canAddPppoe}}
-          <div class="btn-group pull-right service"><button class="btn btn-success" {{action 'openModal' 'formEditPppoe' model}}><span class="glyphicon glyphicon-plus"></span>&#160;PPPoE</button></div>
+          <div class="btn-group pull-right service"><button class="btn btn-success" {{action 'addPppoe' model}}><span class="glyphicon glyphicon-plus"></span>&#160;PPPoE</button></div>
         {{/if}}
         {{#if canAddTodo}}
           <div class="btn-group pull-right service"><button class="btn btn-success" {{action 'openModal' 'formAddTodo' model}}><span class="glyphicon glyphicon-plus"></span>&#160;TODO</button></div>
