Make modal form buttons configurable

--- a/index.html
+++ b/index.html
@@ -458,8 +458,8 @@
               {{yield}}
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Storno</button>
-              <button type="button" class="btn btn-primary" {{action 'ok'}}>Uložit</button>
+              <button type="button" class="btn btn-default" data-dismiss="modal">{{cancelLabel}}</button>
+              <button type="button" class="btn btn-primary" {{action 'ok'}}>{{submitLabel}}</button>
             </div>
           </div>
         </div>
