--- a/index.html
+++ b/index.html
@@ -115,9 +115,11 @@
                 </div>
                 <div class="row">
                   <div class="col-sm-2"><p class="text-right"><strong>Zařízení:</strong></p></div>
-                  {{#each model.service.data.devices as |device|}}
-                    <div class="col-sm-10">{{device.name}} ({{device.owner}})</div>
-                  {{/each}}
+                  <div class="col-sm-10">
+                    {{#each model.service.data.devices as |device|}}
+                      <div>{{device.name}} ({{device.owner}})</div>
+                    {{/each}}
+                  </div>
                 </div>
                 <div class="row">
                   <div class="col-sm-2"><p class="text-right"><strong>Poznámky:</strong></p></div>
