--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
                   <div class="col-sm-10">{{serviceStatus}}</div>
                 </div>
                 <div class="row">
+                  <div class="col-sm-2"><p class="text-right"><strong>Období:</strong></p></div>
+                  <div class="col-sm-10">{{servicePeriod.from}} &rarr; {{servicePeriod.to}}</div>
+                </div>
+                <div class="row">
                   <div class="col-sm-2"><p class="text-right"><strong>Zařízení:</strong></p></div>
                   <div class="col-sm-10">
                     {{#each model.service.data.devices as |device|}}
