--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
 
     <script type="text/x-handlebars" id="service">
       <h2>{{customerName}} {{if isDraft '(DRAFT)'}}
+        {{#unless isDraft}}
+          <a href="https://sis.silesnet.net/account/customer/view.html?customerId={{model.customer.id}}&action=showDetail" target="_blank"><i class="glyphicon glyphicon-user small"></i></a>
+        {{/unless}}
         {{#if canAddDhcp}}
           <div class="btn-group pull-right service"><button class="btn btn-success" {{action 'openModal' 'formEditDhcp' model}}><span class="glyphicon glyphicon-plus"></span>&#160;DHCP</button></div>
         {{/if}}
