--- a/index.html
+++ b/index.html
@@ -502,13 +502,7 @@
       {{/each}}
       </tbody>
       </table>
-<!--       <h2>Seznam DHCP/PPPoE autentifikací bez existující služby</h2>
-      {{#each model.orphans as |orphan|}}
-        <tr>
-          <td>NOP</td>
-        </tr>
-      {{/each}}
- -->    </script>
+    </script>
 
     <script type="text/x-handlebars" data-template-name="components/modal-form">
       <div class="modal">
