--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         {{#unless isDraft}}
           <a href="https://sis.silesnet.net/account/customer/view.html?customerId={{model.customer.id}}&action=showDetail" target="_blank"><i class="glyphicon glyphicon-user tiny"></i></a>
         {{/unless}}
-        {{#link-to 'services'}}<i class="glyphicon glyphicon-step-backward tiny"></i>{{/link-to}}
+        {{#link-to 'services'}}<i class="glyphicon glyphicon-arrow-up tiny"></i>{{/link-to}}
         {{#if canAddDhcp}}
           <div class="btn-group pull-right service"><button class="btn btn-success" {{action 'openModal' 'formEditDhcp' model}}><span class="glyphicon glyphicon-plus"></span>&#160;DHCP</button></div>
         {{/if}}
