--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>SilesNet IS</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="css/jquery-ui.min.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css/print.css"> -->
   </head>
   <body>
     <div id='app'></div>
@@ -74,10 +78,15 @@
       {{/if}}
     </script>
 
-    <script type="text/x-handlebars" id="service">
+    <script type="text/x-handlebars" data-template-name="service">
+      {{outlet}}
+    </script>
+
+    <script type="text/x-handlebars" id="service/index" data-template-name="service/index">
       <h2>{{customerName}} {{if isDraft '(DRAFT)'}}
         {{#unless isDraft}}
           <a href="https://sis.silesnet.net/account/customer/view.html?customerId={{model.customer.id}}&action=showDetail" target="_blank"><i class="glyphicon glyphicon-user tiny"></i></a>
+          {{#link-to 'service.print' }}<i class="glyphicon glyphicon-print tiny"></i>{{/link-to}}
         {{/unless}}
         {{#link-to 'services'}}<i class="glyphicon glyphicon-arrow-up tiny"></i>{{/link-to}}
         {{#if canAddDhcp}}
@@ -289,6 +298,8 @@
       {{#link-to 'services'}}Zpět{{/link-to}}
     </script>
 
+    <script type="text/x-handlebars" src="hbs/protocol.hbs" data-template-name="service/print"></script>
+
     <script type="text/x-handlebars" data-template-name="formEditService">
       {{#modal-form title='Upravit' ok='submit' close='closeModal'}}
         <h4>{{model.form.service.id}} {{model.form.service.name}} {{model.service.download}}/{{model.service.upload}} Mbs</h4>
@@ -471,7 +482,8 @@
               {{view App.MACAddressField value=model.form.pppoe.mac.value}}
             </div>
           {{/if}}
-        </div>        <div class="row">
+        </div>
+        <div class="row">
           <div class="col-sm-6 form-group">
             <label>Login:</label>
             {{input disabled=true class="form-control" name="login" value=model.form.pppoe.login type=text}}
@@ -483,7 +495,6 @@
         </div>
       {{/modal-form}}
     </script>
-
 
     <script type="text/x-handlebars" data-template-name="confirmDhcpRemoval">
       {{#modal-form title='Odebrat DHCP' ok='removeDhcp' close='closeModal' submitLabel='Odebrat'}}
@@ -554,15 +565,16 @@
       {{/if}}
     </script>
 
-    <script type="text/javascript" language="JavaScript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" language="JavaScript" src="js/jquery-ui.min.js"></script>
-    <script type="text/javascript" language="JavaScript" src="js/jquery-ui-datepicker-cs.js"></script>
-    <script type="text/JavaScript" language="JavaScript" src="js/bootstrap.min.js"></script>
-    <script type="text/JavaScript" language="JavaScript" src="js/ember.js"></script>
-    <script type="text/JavaScript" language="JavaScript" src="js/ember-template-compiler.js"></script>
-    <script type="text/JavaScript" language="JavaScript" src="js/app.js"></script>
-    <script type="text/JavaScript" language="JavaScript" src="js/app-services.js"></script>
-    <script type="text/JavaScript" language="JavaScript" src="js/app-components.js"></script>
-    <script type="text/JavaScript" language="JavaScript" src="js/app-util.js"></script>
+    <script type="text/javascript" language="javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" language="javascript" src="js/jquery-ui.min.js"></script>
+    <script type="text/javascript" language="javascript" src="js/jquery-ui-datepicker-cs.js"></script>
+    <script type="text/javascript" language="javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" language="javascript" src="js/ember.js"></script>
+    <script type="text/javascript" language="javascript" src="js/ember-template-compiler.js"></script>
+    <script type="text/javascript" language="javascript" src="js/app.js"></script>
+    <script type="text/javascript" language="javascript" src="js/app-services.js"></script>
+    <script type="text/javascript" language="javascript" src="js/app-components.js"></script>
+    <script type="text/javascript" language="javascript" src="js/app-util.js"></script>
+    <script type="text/javascript" language="javascript" src="js/load-hbs.js"></script>
   </body>
 </html>
