--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
       <h2>{{customerName}} {{if isDraft '(DRAFT)'}}
         {{#unless isDraft}}
           <a href="https://sis.silesnet.net/account/customer/view.html?customerId={{model.customer.id}}&action=showDetail" target="_blank"><i class="glyphicon glyphicon-user tiny"></i></a>
-          {{#link-to 'service.print' }}<i class="glyphicon glyphicon-print tiny"></i>{{/link-to}}
+          {{#if isPlService}}
+            {{#link-to 'service.print' }}<i class="glyphicon glyphicon-print tiny"></i>{{/link-to}}
+          {{/if}}
         {{/unless}}
         {{#link-to 'services'}}<i class="glyphicon glyphicon-arrow-up tiny"></i>{{/link-to}}
         {{#if canAddDhcp}}
