--- a/index.html
+++ b/index.html
@@ -229,16 +229,16 @@
                     {{else}}
                       {{model.pppoe.ip_class}}
                     {{/if}}
-                    {{#if isPppoeOnline}}
+                    {{#if model.pppoe.lastIp.isOnline}}
                       <i class="glyphicon glyphicon-cloud" style="color:green"></i>
                     {{else}}
                       <i class="glyphicon glyphicon-cloud" style="color:gray"></i>
                     {{/if}}
-                    {{#if lastPppoeIp}}<br/>
+                    {{#if model.pppoe.lastIp.ip}}<br/>
                       <small>poslední IP:
-                      <a href="#" {{action 'openTabs' (concat 'http://' lastPppoeIp ':65535') (concat 'http://' lastPppoeIp)}}>{{lastPppoeIp}}</a>
+                      <a href="#" {{action 'openTabs' (concat 'http://' model.pppoe.lastIp.ip ':65535') (concat 'http://' model.pppoe.lastIp.ip)}}>{{model.pppoe.lastIp.ip}}</a>
                       <span class="glyphicon glyphicon-new-window"></span>
-                      {{#if lastPppoeIpDate}}, {{lastPppoeIpDate}}{{/if}}
+                      {{#if model.pppoe.lastIp.dateValue}}, {{model.pppoe.lastIp.timestamp}}{{/if}}
                       </small>
                     {{/if}}
                   </div>
