Add service access resolution

--- a/index.html
+++ b/index.html
@@ -150,6 +150,10 @@
                   </div>
                 </div>
                 <div class="row">
+                  <div class="col-sm-2"><p class="text-right"><strong>Připojení:</strong></p></div>
+                  <div class="col-sm-10">{{access.channel}}/{{access.protocol}}</div>
+                </div>
+                <div class="row">
                   <div class="col-sm-2"><p class="text-right"><strong>Poznámky:</strong></p></div>
                   <div class="col-sm-10">{{model.service.info}}</div>
                 </div>
