Add application version to navigation bar

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             <span class='glyphicon glyphicon-user'></span>
             {{session.userName}}|{{session.userCountry}}
           </div>
+          <a class="navbar-brand version" href="{{status.commitUrl}}" target="_blank">
+            <span class="small">v{{status.version}}</span></a>
         </div>
       </nav>
       <div class="content">
