Refactor version display to shorter format

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             {{session.userName}}|{{session.userCountry}}
           </div>
           <a class="navbar-brand version" href="{{status.commitUrl}}" target="_blank">
-            <span class="small">v{{status.version}}</span></a>
+            <span class="small">v{{status.versionShort}}</span></a>
         </div>
       </nav>
       <div class="content">
