--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -159,7 +160,7 @@
                 </div>
                 <div class="row">
                   <div class="col-sm-2"><p class="text-right"><strong>Poznámky:</strong></p></div>
-                  <div class="col-sm-10">{{model.service.info}}</div>
+                  <div class="col-sm-10 serviceInfo">{{model.service.info}}</div>
                 </div>
             </div>
           </div>
