Refactor lazy handlebars templates loading

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
       {{#link-to 'services'}}Zpět{{/link-to}}
     </script>
 
-    <script type="text/plain" data-src="hbs/protocol.hbs?v=${VERSION}" data-template-name="service/print"></script>
+    <script type="text/x-handlebars-lazy" data-src="hbs/protocol.hbs?v=${VERSION}" data-template-name="service/print"></script>
 
     <script type="text/x-handlebars" data-template-name="formEditService">
       {{#modal-form title='Upravit' ok='submit' close='closeModal'}}
